<resources>
    <string name="app_name">AndroidKotlinPractice</string>
    <string name="back">Back</string>
    <string name="take_photo">Take Photo</string>
    <string name="library">Library</string>
    <string name="update">Update</string>
    <string name="update_me">Update me!</string>
    <string name="saved">Saved</string>
    <string name="first_simple">First Simple</string>
    <string name="second">Second</string>
    <string name="second_simple">Second Simple</string>
    <string name="first">First</string>
    <string name="default_image_show_image" translatable="false">https://kotlinlang.org/docs/images/kotlin-logo.png</string>
    <string name="set">Set</string>
    <string name="url">Url</string>
    <string name="image">Image</string>
    <string name="dev_name">Dolgov Mikhail Dmitrievich, IKBO-12-21</string>
    <string name="my_name">My Name</string>
    <string name="image_show">Image Show</string>
    <string name="hello">Hello!</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="camera">Camera</string>
    <string name="server_data">Server Data</string>
    <string name="compose" translatable="false">Compose</string>
</resources>