<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tasks.imageshow.ui.ImageShowFragment" android:id="@+id/frameLayout">
    <ImageView android:src="@drawable/question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_min="100dp"
            app:layout_constraintWidth_max="200dp"
            app:layout_constraintHeight_min="100dp"
            app:layout_constraintHeight_max="200dp"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            android:contentDescription="@string/image"/>
    <EditText android:layout_width="338dp"
            android:layout_height="53dp"
            android:inputType="textUri"
            android:text="@string/default_image_show_image"
            android:ems="10"
            android:id="@+id/urlEdit"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:autofillHints=""
            android:hint="@string/url"/>
    <Button android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSet"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/urlEdit"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonBack23"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSet"/>
</androidx.constraintlayout.widget.ConstraintLayout>