<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:text="@string/navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butNavigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/butCamera"/>
    <Button
            android:text="@string/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butCamera"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/butNavigation"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/butServerData"/>
    <Button
            android:text="@string/server_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butServerData"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/butCamera"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/butImageShow"/>
    <Button
            android:text="@string/image_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butImageShow"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/butServerData"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/butCompose"/>
    <Button
            android:text="@string/compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butCompose"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/butImageShow" app:layout_constraintVertical_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>