<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".tasks.camera.ui.CameraFragment"
                                                   android:id="@+id/cameraLayout">
    <SurfaceView
            android:layout_width="315dp"
            android:layout_height="405dp" android:id="@+id/surfaceView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butPhoto"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/surfaceView"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butBack25"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
    />
    <Button
            android:text="@string/library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butLib"
            app:layout_constraintTop_toBottomOf="@+id/butPhoto"
            app:layout_constraintBottom_toTopOf="@+id/butBack25" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>